# Eksperimen_SML_Bagus-Alfiyan-Yusuf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: preprocessing.yml
preprocessing/: Eksperimen_Bagus-Alfiyan-Yusuf.ipynb  Eksperimen_Bagus-Alfiyan-Yusuf_executed.ipynb  automate_Bagus-Alfiyan-Yusuf.py  test_files.npy  train_files.npy  train_labels.npy  val_files.npy  val_labels.npy
