[project]
name = "eksperimen-sml-bagus-alfiyan-yusuf"
version = "0.1.0"
description = "Criteria 1 - Experimentation pipeline"
requires-python = ">=3.12"
dependencies = [
    "tensorflow>=2.15.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",
]
